fix chosen button z-index

--- a/game_data/css/main.less
+++ b/game_data/css/main.less
@@ -207,8 +207,10 @@ h1 {
     display: block;
   }
   .chosen-decision {
+    z-index: 99;
     background: #c064a8 !important;
     transform: scale(1.3);
+
   }
 }
 .decision-list {
